Bug 222908 RepositoryListener filters out remove events